turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:16: error: Int does not take type parameters
def step(colors:Array[Color], rule:Array[Int[Array[Int]]] ) 
                                         ^